Fix hero spacing and layout

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,11 +1,11 @@
 header {
   background: url(../../assets/bg-pattern-intro-mobile.svg),
     linear-gradient(135deg, hsl(13, 100%, 72%) 0%, hsl(353, 100%, 62%) 100%);
-  background-position: right 64.5% bottom 66.25%;
+  background-position: right 62.5% bottom 66.25%;
   min-height: 600px;
   width: 100%;
   border-bottom-left-radius: 100px;
-  padding-top: 3.5rem;
+  padding: 3.5rem 5% 0;
   display: flex;
   flex-direction: column;
 }
