--- a/src/components/Header/Hero.module.css
+++ b/src/components/Header/Hero.module.css
@@ -1,8 +1,11 @@
 .hero {
-    padding-top: 6.75rem;
-    width: 90%;
-    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
+    justify-content: flex-end;
+    flex: 1 1 auto;
+    padding-bottom: 9.75rem;
 }
 
 .hero__title {
@@ -10,6 +13,7 @@
     font-family: 'Overpass', sans-serif;
     font-weight: 600;
     font-size: 2.25rem;
+    line-height: 3.5rem
 }
 
 .hero__tagline  {
@@ -19,4 +23,9 @@
     font-size: 1.125rem;
     line-height: 2rem;
     padding: 0 1rem;
+}
+
+.hero__accessibility {
+    gap: 1rem;
+    padding-top: 3rem;
 }
