--- a/src/components/Header/Nav/Nav.module.css
+++ b/src/components/Header/Nav/Nav.module.css
@@ -2,8 +2,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
-  margin: 0 auto;
   height: 2rem;
 }
 
